Adding in ability to change the X gravity as well.

--- a/index.html
+++ b/index.html
@@ -37,11 +37,19 @@
 
 
 			<h5>Gravity Y</h5>
-			<div id="sprite-gravity" class="range-slider" data-slider data-options="step: 1; initial: 50;">
+			<div id="sprite-gravity-y" class="range-slider" data-slider data-options="step: 1; initial: 50;">
 				<span class="range-slider-handle" role="slider" tabindex="0"></span>
 				<span class="range-slider-active-segment"></span>
 				<input type="hidden">
 			</div>
+
+			<h5>Gravity X</h5>
+			<div id="sprite-gravity-x" class="range-slider" data-slider data-options="step: 1; initial: 0;">
+				<span class="range-slider-handle" role="slider" tabindex="0"></span>
+				<span class="range-slider-active-segment"></span>
+				<input type="hidden">
+			</div>
+
 
 	</div>
 	
